welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:22: error: expected class or object definition
def carre() {
^PatternPicture:38: error: expected class or object definition
def paint() {
^PatternPicture:42: error: expected class or object definition
def makeV(c : Color) {
^PatternPicture:55: error: Unmatched closing brace '}' ignored here
}
^